[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter IV/MaximumPowerTransform/MaximumPowerTransfer.gd" type="Script" id=2]
[ext_resource path="res://Resources/Objects/Circuit/MaximumPowerTransferTwo.png" type="Texture" id=3]
[ext_resource path="res://Resources/Objects/Circuit/MaximumPowerTransferOne.png" type="Texture" id=4]

[node name="MaximumPowerTransfer" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.462745, 0.462745, 0.462745, 1 )

[node name="InstructionLabel" type="Label" parent="." index="2"]
margin_left = 14.4172
margin_top = 6.13358
margin_right = 266.417
margin_bottom = 20.1336
text = "To find Pmax at RL, get Vth and Rth first."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="3"]
margin_left = 245.463
margin_top = 156.133
margin_right = 295.463
margin_bottom = 170.133
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="." index="4"]
position = Vector2( 150.356, 90.8829 )
scale = Vector2( 0.386744, 0.386744 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="." index="5"]
visible = false
position = Vector2( 149.499, 87.4534 )
scale = Vector2( 0.386744, 0.386744 )
texture = ExtResource( 3 )

[node name="Vth" type="Label" parent="." index="6"]
margin_left = 8.0
margin_top = 156.0
margin_right = 48.0
margin_bottom = 170.0
text = "Vth:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vth" type="LineEdit" parent="Vth" index="0"]
margin_left = 25.6156
margin_top = -1.44238
margin_right = 83.6156
margin_bottom = 22.5576
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rth" type="Label" parent="." index="7"]
margin_left = 82.5128
margin_top = 156.0
margin_right = 122.513
margin_bottom = 170.0
text = "Rth:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rth" type="LineEdit" parent="Rth" index="0"]
margin_left = 25.6156
margin_top = -1.44238
margin_right = 83.6156
margin_bottom = 22.5576
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pmax" type="Label" parent="." index="8"]
visible = false
margin_left = 158.163
margin_top = 156.0
margin_right = 198.163
margin_bottom = 170.0
text = "Pmax:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pmax" type="LineEdit" parent="Pmax" index="0"]
margin_left = 41.5042
margin_top = -1.44238
margin_right = 99.5042
margin_bottom = 22.5576
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="Vth/Vth" to="." method="_on_Vth_text_entered"]
[connection signal="text_entered" from="Rth/Rth" to="." method="_on_Rth_text_entered"]
[connection signal="text_entered" from="Pmax/Pmax" to="." method="_on_Pmax_text_entered"]
